--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/prismjs@1.25.0/themes/prism.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <script src="https://cdn.jsdelivr.net/npm/prismjs@1.25.0/prism.min.js"></script>
@@ -13,11 +14,11 @@
   </head>
   <body>
       <header>
-        <h1 class="">Reddit MEME'S API</h1>
+        <h1 class="">Welcome to <span style="color:orangered">MEMES </span> API</h1>
       </header>
       <main>
         <div class="container">
-            <div class="address-bar">🔒   https://memes.breakingbarnches.live/api?limit=2&memes=normal</div>
+            <div class="address-bar">🔒   https://memes.breakingbarnches.tech/api?limit=2&type=normal</div>
           <div class="glass" id="json">
 <samp>
     {
@@ -50,6 +51,10 @@
       <section class="getting-started">
         <h2>Getting Started</h2>
         <p>Basic Usage of API</p>
+        <div class="usage">
+          <div>
+            <img src="/img/look.png" alt="">
+          </div>
         <div class="guide-box">
 
         <div class="request">
@@ -57,7 +62,7 @@
                 <span>GET</span> /api?limit=15&type=dank
             </div>
             <div class="information">
-                <span style="color:rgb(207, 70, 20)">curl</span> https://memes.breakingbarnches.live/api?limit=15&type=dank
+                <span style="color:rgb(207, 70, 20)">curl</span> https://memes.breakingbranches.tech/api?limit=15&type=dank
             </div>
         </div>
 
@@ -72,7 +77,7 @@
                 
             </div>
         </div>
-
+      </div>
     </div>
       </section>
       <div class="memes-container">
