add:added og tag for seo

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/styles/style.css" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://meme.breakingbarnches.tech" />
+    <meta property="og:site_name" content="Meme API" />
+    <meta property="og:title" content="Meme's API" />
+    <meta property="og:description" content="Laugh out loud with our collection of hilarious and relatable memes. Find your new favorite meme today!"/>
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/prismjs@1.25.0/themes/prism.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
