fix:home url typo

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/styles/style.css" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://meme.breakingbarnches.tech" />
+    <meta property="og:url" content="https://meme.breakingbranches.tech" />
     <meta property="og:site_name" content="Meme API" />
     <meta property="og:title" content="Meme's API" />
     <meta property="og:description" content="Laugh out loud with our collection of hilarious and relatable memes. Find your new favorite meme today!"/>
@@ -23,7 +23,7 @@
       </header>
       <main>
         <div class="container">
-            <div class="address-bar">🔒   https://memes.breakingbarnches.tech/api?limit=2&type=normal</div>
+            <div class="address-bar">🔒   https://meme.breakingbranches.tech/api?limit=2&type=normal</div>
           <div class="glass" id="json">
 <samp>
     {
