fix:curl url typo

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -67,7 +67,7 @@
                 <span>GET</span> /api?limit=15&type=dank
             </div>
             <div class="information">
-                <span style="color:rgb(207, 70, 20)">curl</span> https://memes.breakingbranches.tech/api?limit=15&type=dank
+                <span style="color:rgb(207, 70, 20)">curl</span> https://meme.breakingbranches.tech/api?limit=15&type=dank
             </div>
         </div>
 
